@startuml
title Vehicles + Camera + OCR Multithreaded Simulation

skinparam classAttributeIconSize 0

class Vehicle {
    - id : int
    - camera : Camera
    - buffer : BufferOCR
    + Vehicle(id:int, camera:Camera, buffer:BufferOCR)
    + run() : void
}

class Camera {
    + synchronized capturePlate(vehicleId:int) : String
}

class BufferOCR {
    - capacity : int
    - queue : Queue<String>
    + BufferOCR(capacity:int)
    + synchronized produce(plate:String) : void
    + synchronized consume() : String
}

class OCR {
    - buffer : BufferOCR
    + OCR(buffer:BufferOCR)
    + run() : void
}

class Thread

Vehicle ..|> Thread
OCR ..|> Thread

Vehicle --> Camera : uses
Vehicle --> BufferOCR : produces to
OCR --> BufferOCR : consumes from

@enduml
